crates/swc/tests/stacktrace/issue-1685/output/stacks.txt
$DIR/tests/stacktrace/issue-1685/input/index.js:3
throw new Error('Error here');
^


Error: Error here
    at console ($DIR/tests/stacktrace/issue-1685/input/index.js:3:7)
